# ray-memleak-repro

./: .gitignore  .pre-commit-config.yaml  README.md  log-mem.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  set-up-dev-env.sh
src/: main.py  plot_mem.py
src/actors/: minimal.py
